# YuNote-web-service-plan

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements-web.txt  run_web.py
.github/workflows/: push_ms_to_modelscope.yml  wake_up_hf.yml
core/: config.py  entities.py
core/asr/: __init__.py  asr_data.py  base.py  chunk_merger.py  chunked_asr.py  elevenlabs.py  transcribe.py
core/summary/: chunker.py  summarizer.py
core/utils/: audio_utils.py  logger.py
prompts/: README.md  summary_general.md  summary_interview.md  summary_lecture.md  summary_meeting.md
scripts/: sync_hf_space_env.py
scripts/redeem_admin_portal/: run_portal.py
scripts/redeem_admin_portal/static/: index.html
sql/: supabase_schema.sql
web/: admin_routes.py  cancel_registry.py  db.py  deps.py  job_queue.py  job_store.py  main.py  order_routes.py  pipeline.py  routes.py  runner.py  settings.py
web/static/: index.html
