[project]
name = "yunote-web-service-plan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diskcache>=5.6.3",
    "fastapi>=0.111.0",
    "httpx[socks]>=0.28.1",
    "huggingface-hub>=1.10.1",
    "jose>=1.0.0",
    "langdetect>=1.0.9",
    "modelscope>=1.35.3",
    "openai>=1.0.0",
    "pydub>=0.25.1",
    "pysocks>=1.7.1",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "requests>=2.32.0",
    "stripe>=12.0.0",
    "supabase>=2.28.3",
    "tenacity>=8.2.0",
    "uvicorn[standard]>=0.29.0",
]
